[gd_scene load_steps=3 format=3 uid="uid://bldg_upgrade_panel"]

[ext_resource type="Script" path="res://scripts/ui/building_upgrade_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.45, 0.55, 0.7, 1.0)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[node name="BuildingUpgradePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -140.0
offset_right = 140.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "箭塔 Lv1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="CurrentStats" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/CurrentStats"]
layout_mode = 2
text = "当前"
horizontal_alignment = 1

[node name="CurrentValues" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/CurrentStats"]
layout_mode = 2
text = "伤害: 8
射程: 96
攻速: 1.0"
horizontal_alignment = 1

[node name="ArrowLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "→"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextStats" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/NextStats"]
layout_mode = 2
text = "下一级"
horizontal_alignment = 1

[node name="NextValues" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/NextStats"]
layout_mode = 2
text = "伤害: 15 ^
射程: 128 ^
攻速: 0.8 ^"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.4, 1.0, 0.4, 1.0)

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "费用: 120 金币"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="UpgradeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 30)
text = "升级"

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 30)
text = "关闭"
